rook-ceph/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: rook-ceph
  name: rook-ceph-mgr-dashboard
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  ports:
    - name: http-dashboard
      port: 7000
      targetPort: 7000
      protocol: TCP
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
