rook-ceph/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: rook-ceph
  name: ceph-ingress
  labels:
    app.kubernetes.io/name: ceph-ingress
    app.kubernetes.io/part-of: ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.tristan.moe`)
      kind: Rule
      services:
        # 7000 available when dashboard is configured without SSL
        # otherwise, we'd use 8443 ; but we get SSL termination here
        # so it's useless to have the dashboard also deal with it
        - name: rook-ceph-mgr-dashboard
          port: 7000
      middlewares:
        - name: oauth-middleware
          namespace: default
  tls:
    secretName: letsencrypt-cert-ceph.tristan.moe
